# ssuaisw-2026-face-age-and-gender-predictor

./: .gitignore  AGENTS.md  CLAUDE.md  CNNmodel.py  CONTRIBUTING.md  README.md  camera_detector.py  main_app.py  pyproject.toml  result_processor.py  test_camera_detector.py  test_run.py  workers.py
.github/: pull_request_template.md
.github/workflows/: tests.yml
AI-Agents/: ACCEPTANCE.md  IMPLEMENTATION.md  PR.md  README.md  REVIEW.md  TASK.md
docs/: SPEC.md  architecture.md  components.md  development.md  overview.md  team-tasks.md
scripts/: list_camera_indices.py  plot_run_metrics.py  plot_single_thread_metrics.py  test_camera_detector.py  test_run.py
src/face_age_gender_predictor/app/: main_app.py  main_app_single.py  main_window.py  workers.py
src/face_age_gender_predictor/camera/: camera_detector.py
src/face_age_gender_predictor/inference/: CNNmodel.py
src/face_age_gender_predictor/processing/: result_processor.py  run_metrics.py
tests/: conftest.py  test_camera_detector.py  test_cnnmodel.py  test_controller.py  test_main_window.py  test_result_processor.py  test_run_metrics.py  test_window_preview.py  test_workers.py
